spacing issue resolved

--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -71,7 +71,7 @@
 .walleField {
   display: flex !important;
   align-items: center !important;
-  justify-content: flex-start !important;
+  justify-content: flex-start;
   gap: 20px;
 }
 
